--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -22,7 +22,7 @@
             android:scaleType="centerInside"
             android:src="@drawable/ic_launcher" />
 
-        <com.ruetgmail.taufiqur.tipsntricks.view.PhenomenaTextView
+        <com.maruf.tech.agecalulatorbangla.view.PhenomenaTextView
             android:id="@+id/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
             android:textColor="@color/white"
             android:textSize="20sp" />
 
-        <com.ruetgmail.taufiqur.tipsntricks.view.PhenomenaTextView
+        <com.maruf.tech.agecalulatorbangla.view.PhenomenaTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/app_name"
