--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -29,14 +29,14 @@
             android:layout_toEndOf="@id/splashIcon"
             android:orientation="vertical">
 
-            <com.ruetgmail.taufiqur.tipsntricks.view.PhenomenaTextView
+            <com.maruf.tech.agecalulatorbangla.view.PhenomenaTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
-            <com.ruetgmail.taufiqur.tipsntricks.view.PhenomenaTextView
+            <com.maruf.tech.agecalulatorbangla.view.PhenomenaTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/tagline"
