--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/splashIcon"
-            android:layout_width="@dimen/margin_100dp"
-            android:layout_height="@dimen/margin_100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_centerHorizontal="true"
             android:adjustViewBounds="true"
             android:contentDescription="@string/app_name"
